--- a/tecnozone/app/globals.css
+++ b/tecnozone/app/globals.css
@@ -32,3 +32,12 @@
 .back-link{
     text-decoration: none;
 }
+
+/*Product component*/
+
+.border-prod{
+    border: 2px solid #e0e0e0; 
+    border-radius: 8px; 
+    padding: 20px; 
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
+}
